--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <main>
     <section>
-      <div class="main__grooup"></div>
+      <div class="main__group"></div>
     </section>
   </main>
 </body>
