Your message here

--- a/index.html
+++ b/index.html
@@ -31,9 +31,36 @@
               <a href="#"><i class="fa-solid icons fa-x"></i></a>
               <a href="#"><i class="fa-brands icons fa-facebook"></i></a>                                      
             </div>
-          </div>
-                   
+          </div>                 
         </nav>
+
+        <div class="user__ads">
+          <div class="image-line">
+            <img src="Images/user-img.jpg" alt="User Ads">
+            <img src="Images/user-img.jpg" alt="User Ads">
+            <img src="Images/user-img.jpg" alt="User Ads">
+            <img src="Images/user-img.jpg" alt="User Ads">
+          </div>
+          <p>
+            Trusted by 150+ <br>
+            exploirers and hikers
+          </p>
+        </div>
+
+        <div class="hero__content">
+          <h1>
+            Let's Go Hiking
+          </h1>
+          <p>
+            Led by locals, build for those who want more than a pretty view, <br>
+            real connection, fresh air, and stories to take home.
+          </p>
+
+          <button class="start__btn">
+            Start Your Hike
+            <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
     </section>
   </main>
 </body>
