update on html, css, js

--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
               <a href="#"><i class="fa-solid icons fa-x"></i></a>
               <a href="#"><i class="fa-brands icons fa-facebook"></i></a>                                      
             </div>
-          </div>                 
+          </div>
+          <div class="toggle__bar">
+            <i class="fa-regular fa-sun"></i>
+
+            <button id="theme-toggle" class="toggle-container" aria-label="Toggle dark mode" aria-pressed="false"
+            >
+              <div class="toggle-slider"></div>
+            </button>
+            <i class="fa-regular fa-moon"></i>
+          </div>
+        
+
         </nav>
 
         <div class="user__ads">
@@ -63,5 +74,7 @@
         </div>
     </section>
   </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
